--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -87,6 +87,9 @@
     </property>
    </widget>
    <widget class="QPushButton" name="copy_but">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>30</x>
